Добавляет разметку всех страниц

--- a/source/index.html
+++ b/source/index.html
@@ -1,205 +1,206 @@
 <!DOCTYPE html>
-<html  class="page" lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Cat Energy</title>
-  </head>
-  <body class="page__body">
-  <header class="main-header">
-    <div class="main-header__logo-wrapper">
-      <a class="main-header__logo" href="#">
-        <img class="main-header__logo-image" src="img/logo-cat-energy.svg" width="33" height="38" alt="">
-      </a>
-      <a class="main-header__logo-title logo-title" href="#">
-        <img class="logo-title__image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
-      </a>
-    </div>
-    <nav class="main-header__nav main-nav">
-      <button class="main-nav__toggle">
+<html class="page" lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>Cat Energy</title>
+</head>
+<body class="page__body">
+<header class="main-header">
+  <div class="main-header__logo-wrapper">
+    <a class="main-header__logo" href="#">
+      <img class="main-header__logo-image" src="img/logo-cat-energy-image.svg" width="191" height="38" alt="">
+    </a>
+  </div>
+  <nav class="main-header__nav main-nav">
+    <button class="main-nav__toggle">
         <span class="visually-hidden">
           Открыть меню.
         </span>
-      </button>
-      <ul class="main-nav__list navigation-list">
-        <li class="navigation-list__item navigation-list__item--current">
-          <a class="navigation-list__link link-navigation" href="#">
-            ГЛАВНАЯ
-          </a>
-        </li>
-        <li class="navigation-list__item">
-          <a class="navigation-list__link link-navigation" href="catalog.html">
-            КАТАЛОГ ПРОДУКЦИИ
-          </a>
-        </li>
-        <li class="navigation-list__item">
-          <a class="navigation-list__link link-navigation" href="form.html">
-            ПОДБОР ПРОГРАММЫ
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main-container">
-    <h1 class="visually-hidden">
-      Интернет-магазин фитнес еды для котиков "Cat energy".
-    </h1>
-    <section class="banner">
-      <div class="banner__wrapper">
-        <h2 class="banner__title">
-          Функциональное питание для котов
-        </h2>
-        <p class="banner__slogan">
-          Занялся собой? Займись котом!
-        </p>
-        <img class="banner__image" src="img/can-image.png" width="280" height="270" alt="Оранжевая банка кошачьего корма с курицей">
-        <a class="banner__button button" href="form.html">
-          ПОДОБРАТЬ ПРОГРАММУ
+    </button>
+    <ul class="main-nav__list navigation-list">
+      <li class="navigation-list__item navigation-list__item--current">
+        <a class="navigation-list__link" href="#">
+          Главная
         </a>
-      </div>
-    </section>
-    <section class="approaches">
-      <h2 class="visually-hidden">
-        Подходы к питанию.
+      </li>
+      <li class="navigation-list__item">
+        <a class="navigation-list__link" href="catalog.html">
+          Каталог продукции
+        </a>
+      </li>
+      <li class="navigation-list__item">
+        <a class="navigation-list__link" href="form.html">
+          Подбор программы
+        </a>
+      </li>
+    </ul>
+  </nav>
+</header>
+<main class="main-container">
+  <h1 class="visually-hidden">
+    Интернет-магазин фитнес еды для котиков "Cat energy".
+  </h1>
+  <section class="banner">
+    <div class="banner__wrapper">
+      <h2 class="banner__title">
+        Функциональное питание для котов
       </h2>
-      <ul class="approaches__list">
-        <li class="approaches__item approaches__item--weight-loss">
-          <h3 class="approaches__title">
-            ПОХУДЕНИЕ
-          </h3>
-          <p class="approaches__description">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-          </p>
-          <a class="approaches__link link-accent" href="#">
-            КАТАЛОГ SLIM
-          </a>
-        </li>
-        <li class="approaches__item approaches__item--weight-gain">
-          <h3 class="approaches__title">
-НАБОР МАССЫ
-          </h3>
-          <p class="approaches__description">
-            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-          </p>
-          <a class="approaches__link link-accent" href="#">
-            КАТАЛОГ PRO
-          </a>
-        </li>
-      </ul>
-    </section>
-    <section class="principles-of-work">
-      <h2 class="principles-of-work__title">
-        Как это работает
-      </h2>
-      <ul class="principles-of-work__list">
-        <li class="principles-of-work__item principles-of-work__item--one">
-          <p class="principles-of-work__description principles-of-work__description--nutrients">
-            Функциональное питание содержит только полезные питательные вещества.
-          </p>
-        </li>
-        <li class="principles-of-work__item principles-of-work__item--two">
-          <p class="principles-of-work__description principles-of-work__description--powder">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </p>
-        </li>
-        <li class="principles-of-work__item principles-of-work__item--three">
-          <p class="principles-of-work__description principles-of-work__description--replacement">
-            Замените один-два приема обычной еды на наше функциональное питание.
-          </p>
-        </li>
-        <li class="principles-of-work__item principles-of-work__item--four">
-          <p class="principles-of-work__description principles-of-work__description--period">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="live-example">
-      <h2 class="live-example__title">
-        Живой пример
-      </h2>
-      <p class="live-example__description">
-        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+      <p class="banner__slogan">
+        Занялся собой? Займись котом!
       </p>
-      <div class="live-example__wrapper estimate">
-        <div class="estimate__wrapper">
-          <div class="estimate__wrapper-inner">
-            <div class="estimate__item estimate-item">
-              <p class="estimate-item__value">
-5 КГ
-              </p>
-              <small class="estimate-item__parameter">
-                снижение веса
-              </small>
-            </div>
-            <div class="estimate__item estimate-item">
-              <p class="estimate-item__value">
-60 ДНЕЙ
-              </p>
-              <small class="estimate-item__parameter">
-                затрачено времени
-              </small>
-            </div>
-          </div>
-          <p class="estimate__price">
-            ЗАТРАТЫ НА ПИТАНИЕ: 15 000 РУБ.
-          </p>
-        </div>
-      </div>
-      <div class="live-example__slider before-after">
-        <img class="before-after__image-before" src="img/example-before.png" width="280" height="256" alt="Фото кота до питания кормом cat-energy">
-        <img class="before-after__image-after" src="img/example-after.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным">
-      </div>
-    </section>
-    <section class="location">
-      <h2 class="visually-hidden">
-        Как до нас добраться.
-      </h2>
-      <div class="location__wrapper">
-        <p class="location__invitation">
-          ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!
-        </p>
-        <address class="location__address address-text">
-         <p class="address-text__paragraph"> ул. Большая Конюшенная, д. 19/8
-         </p>
-<p class="address-text__paragraph">
-          Санкт-Петербург
-</p>
-        </address>
-      </div>
-      <img class="location__image" src="img/map.jpg" width="320" height="362" alt="Карта расположения Cat Energy">
-    </section>
-  </main>
-  <footer class="page-footer">
-    <a class="page-footer__logo-cat-energy logo-title" href="#">
-      <img class="logo-title__image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
-    </a>
-    <div class="page-footer_social social">
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-Vkontakte
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-YouTube
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-Telegram
-          </a>
-        </li>
-      </ul>
+      <img class="banner__image" src="img/can-image.png" width="280" height="270"
+           alt="Оранжевая банка кошачьего корма с курицей">
+      <a class="banner__button button" href="form.html">
+        Подобрать программу
+      </a>
     </div>
-    <div class="page-footer__html-academy-logo-wrapper">
+  </section>
+  <section class="approaches">
+    <h2 class="visually-hidden">
+      Подходы к питанию.
+    </h2>
+    <ul class="approaches__list">
+      <li class="approaches__item approaches__item--weight-loss">
+        <h3 class="approaches__title">
+          Похудение
+        </h3>
+        <p class="approaches__description">
+          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim
+          поможет вашему питомцу сбросить лишний вес.
+        </p>
+        <a class="approaches__link link-accent" href="#">
+          Каталог slim
+        </a>
+      </li>
+      <li class="approaches__item approaches__item--weight-gain">
+        <h3 class="approaches__title">
+          Набор массы
+        </h3>
+        <p class="approaches__description">
+          Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить
+          необходимые мышцы!
+        </p>
+        <a class="approaches__link link-accent" href="#">
+          Каталог pro
+        </a>
+      </li>
+    </ul>
+  </section>
+  <section class="principles-of-work">
+    <h2 class="principles-of-work__title">
+      Как это работает
+    </h2>
+    <ul class="principles-of-work__list">
+      <li class="principles-of-work__item principles-of-work__item--one">
+        <p class="principles-of-work__description principles-of-work__description--nutrients">
+          Функциональное питание содержит только полезные питательные вещества.
+        </p>
+      </li>
+      <li class="principles-of-work__item principles-of-work__item--two">
+        <p class="principles-of-work__description principles-of-work__description--powder">
+          Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+        </p>
+      </li>
+      <li class="principles-of-work__item principles-of-work__item--three">
+        <p class="principles-of-work__description principles-of-work__description--replacement">
+          Замените один-два приема обычной еды на наше функциональное питание.
+        </p>
+      </li>
+      <li class="principles-of-work__item principles-of-work__item--four">
+        <p class="principles-of-work__description principles-of-work__description--period">
+          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+        </p>
+      </li>
+    </ul>
+  </section>
+  <section class="live-example">
+    <h2 class="live-example__title">
+      Живой пример
+    </h2>
+    <p class="live-example__description">
+      Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+      изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+    </p>
+    <div class="live-example__wrapper estimate">
+      <div class="estimate__wrapper">
+        <div class="estimate__wrapper-inner">
+          <div class="estimate__item estimate-item">
+            <p class="estimate-item__value">
+              5 кг
+            </p>
+            <small class="estimate-item__parameter">
+              снижение веса
+            </small>
+          </div>
+          <div class="estimate__item estimate-item">
+            <p class="estimate-item__value">
+              60 дней
+            </p>
+            <small class="estimate-item__parameter">
+              затрачено времени
+            </small>
+          </div>
+        </div>
+        <p class="estimate__price">
+          Затраты на питание: 15 000 РУБ.
+        </p>
+      </div>
+    </div>
+    <div class="live-example__slider before-after">
+      <img class="before-after__image-before" src="img/example-before.png" width="280" height="256"
+           alt="Фото кота до питания кормом cat-energy">
+      <img class="before-after__image-after" src="img/example-after.png" width="280" height="256"
+           alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным">
+    </div>
+  </section>
+  <section class="location">
+    <h2 class="visually-hidden">
+      Как до нас добраться.
+    </h2>
+    <div class="location__wrapper">
+      <p class="location__invitation">
+        Приглашаем к сотрудничеству дилеров!
+      </p>
+      <address class="location__address address-text">
+        <p class="address-text__paragraph"> ул. Большая Конюшенная, д. 19/8
+        </p>
+        <p class="address-text__paragraph">
+          Санкт-Петербург
+        </p>
+      </address>
+    </div>
+    <img class="location__image" src="img/map.jpg" width="320" height="362" alt="Карта расположения Cat Energy">
+  </section>
+</main>
+<footer class="page-footer">
+  <a class="page-footer__logo-cat-energy logo-title" href="#">
+    <img class="logo-title__image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
+  </a>
+    <ul class="social-list">
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy">
+          Vkontakte
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+          YouTube
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy">
+          Telegram
+        </a>
+      </li>
+    </ul>
+  <div class="page-footer__html-academy-logo-wrapper">
     <a class="page-footer__html-academy-logo-text" href="https://htmlacademy.ru">
-      <img class="html-academy-logo-text__image" src="img/html-academy-logo-title.svg" width="113" height="19" alt="HTML-academy">
+      HTML Academy
     </a>
     <a class="page-footer__html-academy-logo" href="https://htmlacademy.ru">
-      <img class="html-academy-logo__image" src="img/html-academy-logo.svg" width="27" height="34" alt="">
+      <img class="page-footer__html-academy-logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="">
     </a>
-    </div>
-  </footer>
-  </body>
+  </div>
+</footer>
+</body>
 </html>
