--- a/source/index.html
+++ b/source/index.html
@@ -176,23 +176,23 @@
   <a class="page-footer__logo-cat-energy logo-title" href="#">
     <img class="logo-title__image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
   </a>
-    <ul class="social-list">
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy">
-          Vkontakte
-        </a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-          YouTube
-        </a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy">
-          Telegram
-        </a>
-      </li>
-    </ul>
+  <ul class="page-footer__social-list social-list">
+    <li class="social-list__item">
+      <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy">
+        Vkontakte
+      </a>
+    </li>
+    <li class="social-list__item">
+      <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+        YouTube
+      </a>
+    </li>
+    <li class="social-list__item">
+      <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy">
+        Telegram
+      </a>
+    </li>
+  </ul>
   <div class="page-footer__html-academy-logo-wrapper">
     <a class="page-footer__html-academy-logo-text" href="https://htmlacademy.ru">
       HTML Academy
@@ -204,4 +204,3 @@
 </footer>
 </body>
 </html>
-<!-- просто комментарий -->
