--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,12 +44,17 @@
     <h2 class="visually-hidden">
       Основные товары.
     </h2>
-    <ul class="main-products__list">
-      <li class="main-products__item product-card">
-        <img class="product-card__image" src="img/catalog/catalog-1-mobile.png" width="140" height="112" alt="">
-        <h3 class="product-card__title">
-          Cat Energy PRO 500 г
-        </h3>
+    <div class="main-products__container">
+      <article class="main-products__item product-card">
+        <a class="product-card__image-link" href="#"><img class="product-card__image"
+                                                          src="img/catalog/catalog-1-mobile.png" width="140"
+                                                          height="112" alt="">
+        </a>
+        <a class="product-card__title-link" href="#">
+          <h3 class="product-card__title">
+            Cat Energy PRO 500 г
+          </h3>
+        </a>
         <dl class="product-card__properties-list">
           <dt class="product-card__property">
             Масса
@@ -73,12 +78,17 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-      </li>
-      <li class="main-products__item product-card">
-        <img class="product-card__image" src="img/catalog/catalog-2-mobile.png" width="140" height="112" alt="">
-        <h3 class="product-card__title">
-          Cat Energy PRO 1000 г
-        </h3>
+      </article>
+      <article class="main-products__item product-card">
+        <a class="product-card__image-link" href="#"><img class="product-card__image"
+                                                          src="img/catalog/catalog-2-mobile.png" width="140"
+                                                          height="112" alt="">
+        </a>
+        <a class="product-card__title-link" href="#">
+          <h3 class="product-card__title">
+            Cat Energy PRO 1000 г
+          </h3>
+        </a>
         <dl class="product-card__properties-list">
           <dt class="product-card__property">
             Масса
@@ -102,12 +112,17 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-      </li>
-      <li class="main-products__item product-card">
-        <img class="product-card__image" src="img/catalog/catalog-3-mobile.png" width="140" height="112" alt="">
-        <h3 class="product-card__title">
-          Cat Energy PRO 500 г
-        </h3>
+      </article>
+      <article class="main-products__item product-card">
+        <a class="product-card__image-link" href="#"><img class="product-card__image"
+                                                          src="img/catalog/catalog-3-mobile.png" width="140"
+                                                          height="112" alt="">
+        </a>
+        <a class="product-card__title-link" href="#">
+          <h3 class="product-card__title">
+            Cat Energy PRO 500 г
+          </h3>
+        </a>
         <dl class="product-card__properties-list">
           <dt class="product-card__property">
             Масса
@@ -131,12 +146,17 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-      </li>
-      <li class="main-products__item product-card">
-        <img class="product-card__image" src="img/catalog/catalog-4-mobile.png" width="140" height="112" alt="">
-        <h3 class="product-card__title">
-          Cat Energy PRO 1000 г
-        </h3>
+      </article>
+      <article class="main-products__item product-card">
+        <a class="product-card__image-link" href="#"><img class="product-card__image"
+                                                          src="img/catalog/catalog-4-mobile.png" width="140"
+                                                          height="112" alt="">
+        </a>
+        <a class="product-card__title-link" href="#">
+          <h3 class="product-card__title">
+            Cat Energy PRO 1000 г
+          </h3>
+        </a>
         <dl class="product-card__properties-list">
           <dt class="product-card__property">
             Масса
@@ -160,12 +180,17 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-      </li>
-      <li class="main-products__item product-card">
-        <img class="product-card__image" src="img/catalog/catalog-5-mobile.png" width="140" height="112" alt="">
-        <h3 class="product-card__title">
-          Cat Energy slim 500 г
-        </h3>
+      </article>
+      <article class="main-products__item product-card">
+        <a class="product-card__image-link" href="#"><img class="product-card__image"
+                                                          src="img/catalog/catalog-5-mobile.png" width="140"
+                                                          height="112" alt="">
+        </a>
+        <a class="product-card__title-link" href="#">
+          <h3 class="product-card__title">
+            Cat Energy slim 500 г
+          </h3>
+        </a>
         <dl class="product-card__properties-list">
           <dt class="product-card__property">
             Масса
@@ -189,12 +214,17 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-      </li>
-      <li class="main-products__item product-card">
-        <img class="product-card__image" src="img/catalog/catalog-6-mobile.png" width="140" height="112" alt="">
-        <h3 class="product-card__title">
-          Cat Energy slim 1000 г
-        </h3>
+      </article>
+      <article class="main-products__item product-card">
+        <a class="product-card__image-link" href="#"><img class="product-card__image"
+                                                          src="img/catalog/catalog-6-mobile.png" width="140"
+                                                          height="112" alt="">
+        </a>
+        <a class="product-card__title-link" href="#">
+          <h3 class="product-card__title">
+            Cat Energy slim 1000 г
+          </h3>
+        </a>
         <dl class="product-card__properties-list">
           <dt class="product-card__property">
             Масса
@@ -218,12 +248,17 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-      </li>
-      <li class="main-products__item product-card">
-        <img class="product-card__image" src="img/catalog/catalog-7-mobile.png" width="140" height="112" alt="">
-        <h3 class="product-card__title">
-          Cat Energy slim 500 г
-        </h3>
+      </article>
+      <article class="main-products__item product-card">
+        <a class="product-card__image-link" href="#"><img class="product-card__image"
+                                                          src="img/catalog/catalog-7-mobile.png" width="140"
+                                                          height="112" alt="">
+        </a>
+        <a class="product-card__title-link" href="#">
+          <h3 class="product-card__title">
+            Cat Energy slim 500 г
+          </h3>
+        </a>
         <dl class="product-card__properties-list">
           <dt class="product-card__property">
             Масса
@@ -247,8 +282,8 @@
         <a class="product-card__button button" href="#">
           Заказать
         </a>
-      </li>
-      <li class="main-products__item show-more-card">
+      </article>
+      <div class="main-products__item show-more-card">
         <h3 class="show-more-card__title">
           Показать еще 100500 товаров
         </h3>
@@ -258,8 +293,8 @@
         <a class="show-more-card__button button-show-more" href="#">
           Показать все
         </a>
-      </li>
-    </ul>
+      </div>
+    </div>
   </section>
   <section class="additional-products">
     <h2 class="additional-products__title">
@@ -360,7 +395,7 @@
   <a class="page-footer__logo-cat-energy logo-title" href="#">
     <img class="logo-title__image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
   </a>
-  <ul class="social-list">
+  <ul class="page-footer__social-list social-list">
     <li class="social-list__item">
       <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy">
         Vkontakte
@@ -388,4 +423,3 @@
 </footer>
 </body>
 </html>
-<!-- просто комментарий -->
