--- a/3/index.html
+++ b/3/index.html
@@ -42,7 +42,7 @@
   <h1 class="visually-hidden">
     Интернет-магазин фитнес еды для котиков "Cat energy".
   </h1>
-  <section class="banner">
+  <section class="banner container">
     <h2 class="banner__title">
       Функциональное питание для котов
     </h2>
@@ -54,6 +54,7 @@
       Подобрать программу
     </a>
   </section>
+  <div class="container">
   <section class="approaches">
     <h2 class="visually-hidden">
       Подходы к питанию.
@@ -112,7 +113,8 @@
       </li>
     </ul>
   </section>
-  <section class="live-example">
+  </div>
+  <section class="live-example container">
     <h2 class="live-example__title">
       Живой пример
     </h2>
@@ -152,7 +154,7 @@
     <h2 class="visually-hidden">
       Как до нас добраться.
     </h2>
-    <div class="location__wrapper">
+    <div class="location__wrapper container">
       <p class="location__invitation">
         Приглашаем к сотрудничеству дилеров!
       </p>
@@ -167,7 +169,7 @@
     <img class="location__image" src="img/map.jpg" width="320" height="362" alt="Карта расположения Cat Energy">
   </section>
 </main>
-<footer class="page-footer">
+<footer class="page-footer container">
   <a class="page-footer__logo-cat-energy" href="#">
     <img class="page-footer__logo-cat-energy-image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
   </a>
