--- a/3/catalog.html
+++ b/3/catalog.html
@@ -291,7 +291,7 @@
       </div>
     </div>
   </section>
-  <section class="additional-products">
+  <section class="additional-products container">
     <h2 class="additional-products__title">
       Дополнительные товары
     </h2>
@@ -371,7 +371,7 @@
     <h2 class="visually-hidden">
       Как до нас добраться.
     </h2>
-    <div class="location__wrapper">
+    <div class="location__wrapper container">
       <p class="location__invitation">
         Приглашаем к сотрудничеству дилеров!
       </p>
@@ -386,7 +386,7 @@
     <img class="location__image" src="img/map.jpg" width="320" height="362" alt="Карта расположения Cat Energy">
   </section>
 </main>
-<footer class="page-footer">
+<footer class="page-footer container">
   <a class="page-footer__logo-cat-energy" href="#">
     <img class="page-footer__logo-cat-energy-image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
   </a>
