--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,16 +2,15 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cat Energy</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="page__body">
-<header class="main-header">
-  <div class="main-header__logo-wrapper">
+<header class="main-header container">
     <a class="main-header__logo" href="#">
-      <img class="main-header__logo-image" src="img/logo-cat-energy-image.svg" width="191" height="38" alt="">
+      <img class="main-header__logo-image" src="img/logo-cat-energy-image.svg" width="191" height="38" alt="Логотип Cat Energy">
     </a>
-  </div>
   <nav class="main-header__nav main-nav">
     <button class="main-nav__toggle">
         <span class="visually-hidden">
@@ -24,8 +23,8 @@
           Главная
         </a>
       </li>
-      <li class="navigation-list__item navigation-list__item--current">
-        <a class="navigation-list__link" href="#">
+      <li class="navigation-list__item">
+        <a class="navigation-list__link navigation-list__link--current" href="#">
           Каталог продукции
         </a>
       </li>
@@ -343,7 +342,7 @@
           Заказать
         </a>
       </div>
-      <div class="additional-products__item additional-product-card additional-product-card--first">
+      <div class="additional-products__item additional-product-card">
         <h3 class="additional-product-card__title">
           Витамины
         </h3>
@@ -375,7 +374,8 @@
         Приглашаем к сотрудничеству дилеров!
       </p>
       <address class="location__address address-text">
-        <p class="address-text__paragraph"> ул. Большая Конюшенная, д. 19/8
+        <p class="address-text__paragraph">
+          ул. Большая Конюшенная, д. 19/8
         </p>
         <p class="address-text__paragraph">
           Санкт-Петербург
