Вносит изменения в контейнер на странице формы

--- a/source/index.html
+++ b/source/index.html
@@ -149,8 +149,16 @@
         </div>
       </div>
       <div class="live-example__slider before-after">
-        <img class="before-after__image-before" src="img/example-before.png" width="280" height="256" alt="Фото кота до питания кормом cat-energy">
-        <img class="before-after__image-after" src="img/example-after.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным">
+        <div class="before-after__wrapper before-after__wrapper--1">
+          <img class="before-after__image-before" src="img/example-before.png" width="280" height="256" alt="Фото кота до питания кормом cat-energy">
+        </div>
+        <div class="before-after__wrapper before-after__wrapper--2">
+          <img class="before-after__image-after" src="img/example-after.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным">
+        </div>
+        <div class="before-after__toggle">
+          <button class="before-after__toggle-button" type="button">
+          </button>
+        </div>
       </div>
     </div>
   </section>
